# Samples

./: .gitmodules  .syntastic_cpp_config  Examples.sln  index.html  params.json
AngularTutorial/: AngularTutorial.jsproj  AngularTutorial_TemporaryKey.pfx  Main.html  default.html  package.appxmanifest
AngularTutorial/js/: app.js
C++/Boost/: Bind.h  Boost.cpp  Boost.vcxproj  Boost.vcxproj.filters  IOService.cpp  IOService.h  IOServiceTCP.h  Parser.h  Serialization.cpp  Thread.cpp  Timer.cpp  Timer.h  WebClient.cpp  WebClient.h
C/C_Cpp_Interoperability/: CEntryPoint.c  C_Cpp_Interoperability.vcxproj  C_Cpp_Interoperability.vcxproj.filters  CodeInteroperability.cpp  CodeInteroperability.h
CMake/: CMakeLists.txt  Linux_Toolchain.cmake  Program.cpp  TutorialConfig.h.in
Clang/: .clang-format  clang.bat
NodeJs/Console Tutorial/: ConsoleTutorial.njsproj  Module.js  README.md  ReadFile.js  WebServer.js  hello.txt  package.json
NodeJs/ExpressTutorial/: ExpressTutorial.njsproj  README.md  package.json
NodeJs/ExpressTutorial/routes/: Debug.js  FileSystem.js  JasonHelper.js  index.js
NodeJs/SocketIOTutorial/: SocketIOTutorial.njsproj  package.json
NodeJs/WebApplicationTutorial/: README.md  package.json
c++/: .gitignore
c++/0mq/: CMakeLists.txt
c++/0mq/libs/boost/program_options/: CMakeLists.txt
c++/0mq/source/: main.cpp  request_reply_server.cpp  request_reply_server.h
c++/boost/: Boost.cpp  Boost.vcxproj.filters  CMakeLists.txt  Serialization.h  Thread.h  WebServer.cpp  bind.cpp  webserver.h
c++/boost/libs/boost/: CMakeLists.txt
c++/boost/libs/boost/bind/: CMakeLists.txt
c++/boost/libs/boost/chrono/: CMakeLists.txt
c++/boost/libs/boost/filesystem/: CMakeLists.txt
c++/boost/libs/boost/program_options/: CMakeLists.txt
c++/boost/libs/boost/serialization/: CMakeLists.txt
c++/boost/libs/boost/system/: CMakeLists.txt
c++/boost/libs/boost/thread/: CMakeLists.txt
c++/boost/libs/boost/timer/: CMakeLists.txt
c++/boost/source/: bind.cpp  boost.cpp  boost_samples.cpp  ioservice.cpp  ioservicetcp.cpp  parser.cpp  serialization.cpp  serialization.h  thread.cpp  webclient.cpp  webserver.cpp  webserver.h
c++/windows/: CMakeLists.txt  README.md
c++/windows/source/: stdafx.cpp  windows_sampler.cpp
c++/windows/test/: CMakeLists.txt
c/kernel_module/src/: Makefile  hello_world.c
node_js/console/: web_client.js
node_js/express/: app.js  package.json
node_js/express/files/: text.txt  zip.7z
node_js/express/routes/: navigation.js  render.js
node_js/express/views/: view_01.jade
node_js/native_abstraction/: .gitignore  README.md  binding.gyp  main.cpp  main.js  package.json
node_js/native_abstraction/source/: main.cpp  main.js
node_js/socket_io/: README.md  client.html  package.json  server.js
node_js/web_application/: WebApplicationTutorial.njsproj  server.js
react/hello_world/: package.json
react/hello_world/src/: App.js  button.js
react_js/: package.json
react_js/public/: index.html
react_js/src/: App.css  App.js
react_js/src/components/: input_with_send.js
